// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parser should postprocess elements allow modify element metadata 1`] = `
{
  "aria": {
    "implicitRole": [Function],
    "naming": [Function],
  },
  "attributes": {
    "accesskey": {
      "enum": [
        /\\./u,
      ],
      "list": true,
    },
    "align": {
      "deprecated": true,
    },
    "autocapitalize": {
      "enum": [
        "off",
        "none",
        "on",
        "sentences",
        "words",
        "characters",
      ],
    },
    "autocorrect": {
      "enum": [
        "on",
        "off",
      ],
      "omit": true,
    },
    "autofocus": {
      "boolean": true,
    },
    "class": {},
    "contenteditable": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "contextmenu": {
      "deprecated": true,
    },
    "datafld": {
      "deprecated": true,
    },
    "dataformatas": {
      "deprecated": true,
    },
    "datasrc": {
      "deprecated": true,
    },
    "dir": {
      "enum": [
        "ltr",
        "rtl",
        "auto",
      ],
    },
    "draggable": {
      "enum": [
        "true",
        "false",
      ],
    },
    "enterkeyhint": {
      "enum": [
        "enter",
        "done",
        "go",
        "next",
        "previous",
        "search",
        "send",
      ],
    },
    "exportparts": {},
    "headingoffset": {
      "enum": [
        /\\^\\[0-8\\]\\$/,
      ],
    },
    "headingreset": {
      "boolean": true,
    },
    "hidden": {
      "enum": [
        "hidden",
        "until-found",
      ],
      "omit": true,
    },
    "id": {
      "enum": [
        /\\^\\\\S\\+\\$/,
      ],
    },
    "inert": {
      "boolean": true,
    },
    "inputmode": {
      "enum": [
        "none",
        "text",
        "decimal",
        "numeric",
        "tel",
        "search",
        "email",
        "url",
      ],
    },
    "is": {},
    "itemid": {},
    "itemprop": {},
    "itemref": {},
    "itemscope": {
      "boolean": true,
    },
    "itemtype": {},
    "lang": {},
    "nonce": {},
    "part": {},
    "popover": {
      "enum": [
        "auto",
        "hint",
        "manual",
      ],
      "omit": true,
    },
    "role": {},
    "slot": {},
    "spellcheck": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "style": {},
    "tabindex": {
      "enum": [
        /\\^-\\?\\\\d\\+\\$/,
      ],
    },
    "title": {},
    "translate": {
      "enum": [
        "yes",
        "no",
      ],
      "omit": true,
    },
    "writingsuggestions": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
  },
  "flow": true,
  "focusable": false,
  "implicitRole": [Function],
  "permittedContent": [
    "@flow",
    "dt",
    "dd",
  ],
  "tagName": "i",
  "templateRoot": false,
}
`;

exports[`parser should postprocess elements allow modify element metadata 2`] = `
{
  "aria": {
    "implicitRole": [Function],
    "naming": [Function],
  },
  "attributes": {
    "accesskey": {
      "enum": [
        /\\./u,
      ],
      "list": true,
    },
    "autocapitalize": {
      "enum": [
        "off",
        "none",
        "on",
        "sentences",
        "words",
        "characters",
      ],
    },
    "autocorrect": {
      "enum": [
        "on",
        "off",
      ],
      "omit": true,
    },
    "autofocus": {
      "boolean": true,
    },
    "class": {},
    "contenteditable": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "contextmenu": {
      "deprecated": true,
    },
    "dir": {
      "enum": [
        "ltr",
        "rtl",
        "auto",
      ],
    },
    "draggable": {
      "enum": [
        "true",
        "false",
      ],
    },
    "enterkeyhint": {
      "enum": [
        "enter",
        "done",
        "go",
        "next",
        "previous",
        "search",
        "send",
      ],
    },
    "exportparts": {},
    "headingoffset": {
      "enum": [
        /\\^\\[0-8\\]\\$/,
      ],
    },
    "headingreset": {
      "boolean": true,
    },
    "hidden": {
      "enum": [
        "hidden",
        "until-found",
      ],
      "omit": true,
    },
    "id": {
      "enum": [
        /\\^\\\\S\\+\\$/,
      ],
    },
    "inert": {
      "boolean": true,
    },
    "inputmode": {
      "enum": [
        "none",
        "text",
        "decimal",
        "numeric",
        "tel",
        "search",
        "email",
        "url",
      ],
    },
    "is": {},
    "itemid": {},
    "itemprop": {},
    "itemref": {},
    "itemscope": {
      "boolean": true,
    },
    "itemtype": {},
    "lang": {},
    "nonce": {},
    "part": {},
    "popover": {
      "enum": [
        "auto",
        "hint",
        "manual",
      ],
      "omit": true,
    },
    "role": {},
    "slot": {},
    "spellcheck": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "style": {},
    "tabindex": {
      "enum": [
        /\\^-\\?\\\\d\\+\\$/,
      ],
    },
    "title": {},
    "translate": {
      "enum": [
        "yes",
        "no",
      ],
      "omit": true,
    },
    "writingsuggestions": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
  },
  "flow": true,
  "focusable": false,
  "implicitRole": [Function],
  "permittedContent": [
    "@phrasing",
  ],
  "phrasing": true,
  "tagName": "u",
  "templateRoot": false,
}
`;
